# InventoryManager

./: .gitignore  README.md
backend/: Cargo.toml  database.db
backend/src/: main.rs
backend/src/api/: endpoint.rs  mod.rs  pdf.rs  routes.rs  server.rs
backend/src/api/pdf_gen/: html.rs  mod.rs  pdf.rs
backend/src/core/: mod.rs  operations.rs  statistics.rs  traits.rs  types.rs
backend/src/core/pdf/: generation.rs  mod.rs
backend/src/core/statistics/: mod.rs  stats.rs  statsop.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  layout.tsx
frontend/src/articles/: addArticle.tsx  articleDetails.tsx  articleTable.tsx  articles.tsx  columns.tsx  data-table.tsx  page.tsx
frontend/src/articles/articleDetails/: page.tsx
frontend/src/articles/cardForm/: card.tsx  operations.ts
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  formCard.tsx  formCardOrder.tsx  navbar.tsx  select.tsx
frontend/src/customers/: addCustomer.tsx  columns.tsx  customerDetails.tsx  customerTable.tsx  customers.tsx  page.tsx
frontend/src/customers/customerDetails/: page.tsx
frontend/src/lib/: api.ts  error.ts  interfaces.ts  operations.ts  store.ts
frontend/src/lib/services/: articleService.ts  customerServices.ts  importExportService.ts  orderServices.ts  statisticService.ts
frontend/src/orders/: addOrder.tsx  columns.tsx  orderLog.tsx  orderTable.tsx  orders.tsx  page.tsx
frontend/src/orders/articleSelection/: columns.tsx  selection.tsx
frontend/src/orders/orderDetails/: OrderItems.tsx  columns.tsx  (+3 more)
(+2 files in other folders)
