[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
rusqlite = "0.28.0"
r2d2_sqlite = "0.21"
r2d2 = "0.8"
log = "0.4"
csv = "1.1"
tokio-util = "0.7"
futures = "0.3"
printpdf = "0.7.0"
ordered-float = "4.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
headless_chrome = "1.0.15"
urlencoding = "2.1.3"
